# SimpleRestaurantSite

./: .gitignore  README.md  main.py  pyproject.toml
restaurant/backend/: app.py  db.py
restaurant/frontend/css/: about.css  main-page.css  menuu.css  navbar.css  reservation.css
restaurant/frontend/html/: about.html  main-page.html  menu.html  reservation.html
restaurant/frontend/js/: reservation.js
