[tool.poetry]
name = "restaurant"
version = "0.1.0"
description = "simple restaurant site for web course"
authors = ["Lenikas <stuffer232@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.22"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"
Jinja2 = "^2.11.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
